Changed run command

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,9 @@
+setup:
+  addons:
+    - plan: heroku-postgresql:hobby-dev
+      as: DATABASE_URL
 build:
   docker:
     web: Dockerfile
 run:
-  web: bundle exec puma -C config/puma.rb
+  web: node dist/run.js
